# tpy357

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements_dev.txt
telegram-bot/: bot.py  bot.toml  requirements.txt  tpy357-telegram-bot.service
tpy357/: __init__.py  cli.py
